# NukeKit

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  data.json  environment.yaml  notes.md  pyproject.toml  test.py  ui.py
.github/workflows/: ci.yml
config/: setting.yaml  settings.yaml
docs/source/: conf.py  index.rst  modules.rst  nukekit.core.rst  nukekit.rst  nukekit.utils.rst  test.rst
examples/: manifest.json
nukekit/core/: cli.py  publisher.py  versioning.py
src/docs/source/: modules.rst  nukekit.core.rst  nukekit.rst  nukekit.ui.rst  nukekit.utils.rst
src/nukekit/: __init__.py  cli.py
src/nukekit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nukekit/app/: __init__.py  container.py  service.py
src/nukekit/core/: __init__.py  assets.py  config.py  console.py  context.py  copy.py  exceptions.py  gizmo.py  install.py  installer.py  manifest.py  manifest_store.py  publisher.py  repo.py  repository.py  scanner.py  serialization.py  sync.py  validator.py  versioning.py
src/nukekit/data/: manifest.json
src/nukekit/ui/: __init__.py  json_tree.py  main.py  main_window.py  nukekit.ui  presenter.py  ui.py  untitled.ui
src/nukekit/ui/widgets/: jsonTreeWidget.py
src/nukekit/utils/: __init__.py  _logger.py  config.py  console.py  context.py  json.py  logger.py  manifest.py  misc.py  paths.py  scanner.py  ux.py
src/nukekit/workflows/: __init__.py  install.py  install_workflow.py  publish.py  publish_workflow.py  scan.py  scan_workflow.py  set_context.py
test/: conftest.py  test_assets.py  test_publisher.py  test_versionning.py
test/integration/: test_install_worflow.py  test_publish_workflow.py  test_workflows.py
test/unit/: test_assets.py  test_config.py  test_manifest.py  test_repository.py  test_version.py
