[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "nukekit"
version = "0.0.1"
description = "Nuke gizmo/script publishing system"
authors = [{ name="Etienne Godin", email="etiennegodin@duck.com" }]

dependencies = [
 "semver",
 "python-dotenv",
 "shortuuid",
 "pyaml",
 "rich",
 "simple_term_menu"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]
ui = [
    "PyQt5>=5.15.0",  # Or PySide6
]


[project.scripts]   # <-- entry point CLI
nukekit = "nukekit.cli:main"


[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]
fix = true

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
